# DATect-Forecasting-Domoic-Acid

./: .claudeignore  .cursorignore  .gcloudignore  .gitignore  .ralphrc  CLAUDE.md  Dockerfile.production  HYAK_SETUP.md  LICENSE  README.md  cloudbuild.yaml  compare_models_gpu.py  config.py  convert_results_to_cache.py  data_strategy_results.json  dataset-creation.py  deploy_gcloud.sh  eval_model_variants.py  eval_paper_metrics.py  optimize_r2_spike.py  paper_ablation_results.json  paper_ablation_study.py  paper_bootstrap_ci.py  paper_bootstrap_results.json  paper_feature_ablation.py  paper_model_comparison_latex.txt  paper_model_comparison_results.json  paper_nested_cv_results.json  paper_nested_cv_weights.py  paper_paired_bootstrap.py  paper_paired_bootstrap_results.json  paper_per_site_model_comparison.py  paper_resplit_eval.py  paper_resplit_results.json  paper_spike_f1.py  paper_spike_f1_latex.txt  paper_spike_f1_results.json  paper_stability_study.py  paper_stability_table.py  paper_weight_analysis.py  (+15 more)
.ralph/: AGENT.md  PROMPT.md  fix_plan.md
backend/: api.py  cache_manager.py  redis_cache.py  visualizations.py
cache/: manifest.json
cache/hyperparams/: classification_xgboost_best.json  regression_xgboost_best.json
cache/retrospective/: classification_ensemble.json  classification_ensemble.parquet  classification_logistic.json  classification_logistic.parquet  classification_naive.parquet  classification_xgboost.json  classification_xgboost.parquet  regression_catboost.json  regression_catboost.parquet  regression_linear.json  regression_linear.parquet  regression_naive.json  regression_rf.json  regression_rf.parquet  regression_xgboost.json  regression_xgboost.parquet
cache/spectral/: Cannon Beach.json  Clatsop Beach.json  Coos Bay.json  Copalis.json  Gold Beach.json  Kalaloch.json  Long Beach.json  Newport.json  Quinault.json  Twin Harbors.json  all_sites.json
cache/visualizations/: Cannon Beach_correlation.json  Clatsop Beach_correlation.json  Coos Bay_correlation.json  Copalis_correlation.json  Gold Beach_correlation.json  Kalaloch_correlation.json  Long Beach_correlation.json  Newport_correlation.json  Quinault_correlation.json  Twin Harbors_correlation.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/processed/: final_output.parquet
docs/: BASELINE_AND_IMPROVEMENT.md  DATA_PIPELINE_DETAILED.md  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  EVALUATION_AND_RESEARCH.md  FORECAST_PIPELINE.md  PIPELINE_DEEP_DIVE.md  PIPELINE_OVERVIEW.md  QUICK_START.md  SATELLITE_CV_REGIME_DETECTION.md  SCIENTIFIC_VALIDATION.md  VISUALIZATIONS_GUIDE.md  dataset-creation-scientific-decisions.md
eval_results/env_lead/: prespike_features.csv  spike_events.csv  statistical_tests.csv
forecasting/: __init__.py  autocorrelation_diagnostic.py  classification_adapter.py  data_processor.py  ensemble_model_factory.py  feature_utils.py  forecast_engine.py  hyperparam_search.py  model_factory.py  neural_model.py  per_site_models.py  raw_data_forecaster.py  raw_data_processor.py  raw_forecast_engine.py  raw_model_factory.py  torch_forecasting_adapter.py  validation.py
forecasting/models/: __init__.py  gpytorch_model.py  tabnet_model.py  tcn_model.py  tft_model.py
forecasting/utils/: analytics.py
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: ErrorBoundary.jsx
palantir-aip/: aip_actions_spec.md  aip_logic_prompt.md  demo_script.md  foundry_transform.py  generate_synthetic_data.py  ontology_schema.md  synthetic_data.csv
paper/: _temp_compile.tex  datect_paper.tex  datect_paper_mdpi.tex  generate_figures.py  references.bib
scripts/: fig5_pred_vs_obs.py  fig6_feature_importance.py  measure_regression_r2.py  setup_fast.sh
scripts/eval/: _repo.py  eval_paper_metrics.py  paper_ablation_study.py  paper_stability_study.py  paper_stability_table.py  spike_detection_eval.py
tests/: test_leakage_audit.py
(+5 files in other folders)
